--- a/views/my_page_update.ejs
+++ b/views/my_page_update.ejs
@@ -102,6 +102,9 @@
         <input type="submit" />
       </p>
     </form>
+    <div id="Instructor">  <!--선생님일때 업데이트표시-->
+      <p>선생님 페이지</p>
+    </div>
   </body>
   <!-- Footer-->
   <footer class="bg-light py-5">
@@ -117,6 +120,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
 <!-- Core theme JS-->
 <script src="../js/scripts.js"></script>
+<script src="../js/instructor.js"></script>
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
 <!-- * *                               SB Forms JS                               * *-->
 <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
