--- a/views/enroll_page_before_search.ejs
+++ b/views/enroll_page_before_search.ejs
@@ -64,8 +64,209 @@
           </div>
       </div>
   </header>
+
+  <div align="center">
+  <form action = "/enroll/sub_result" method="get">
+    <fieldset>
+      <label class="control" for="Monday">
+        <input type="checkbox" name="Course_day" id="Monday" value="1" checked>
+        <span class="control__content">
+          월요일
+        </span>
+      </label>
+      <label class="control" for="Tuesday">
+        <input type="checkbox" name="Course_day" id="Tuesday" value="2">
+        <span class="control__content">
+          화요일
+        </span>
+      </label>
+      <label class="control" for="Wednesday">
+        <input type="checkbox" name="Course_day" id="Wednesday" value="3">
+        <span class="control__content">
+          수요일
+        </span>
+      </label>
+      <label class="control" for="Thursday">
+        <input type="checkbox" name="Course_day" id="Thursday" value="4">
+        <span class="control__content">
+          목요일
+        </span>
+      </label>
+      <label class="control" for="Friday">
+        <input type="checkbox" name="Course_day" id="Friday" value="5">
+        <span class="control__content">
+          금요일
+        </span>
+      </label>
+      <label class="control" name="Saturday">
+        <input type="checkbox" name="Course_day" id="Saturday" value="6">
+        <span class="control__content">
+          토요일
+        </span>
+      </label>
+      <label class="control" for="Sunday">
+        <input type="checkbox" name="Course_day" id="Sunday" value="7">
+        <span class="control__content">
+          일요일
+        </span>
+    </fieldset>
+    <fieldset>
+      </label>
+      <label class="control" for="C">
+        <input type="checkbox" name="Course_type" id="C" value="1" checked>
+        <span class="control__content">
+        C
+        </span>
+      </label>
+      <label class="control" for="Python">
+        <input type="checkbox" name="Course_type" id="Python" value="2">
+        <span class="control__content">
+        Python
+        </span>
+      </label>
+      <label class="control" for="Mincraft Programming">
+        <input type="checkbox" name="Course_type" id="Mincraft Programming" value="3">
+        <span class="control__content">
+        Mincraft Programming
+        </span>
+      </label>
+      <label class="control" for="App Inventor">
+        <input type="checkbox" name="Course_type" id="App Inventor" value="4">
+        <span class="control__content">
+        App Inventor
+        </span>
+      </label>
+      <label class="control" for="Scatch">
+        <input type="checkbox" name="Course_type" id="Scatch" value="5">
+        <span class="control__content">
+        Scatch
+        </span>
+      </label>
+      <label class="control" name="Entry">
+        <input type="checkbox" name="Course_type" id="Entry" value="6">
+        <span class="control__content">
+        Entry
+        </span>
+      </label>
+      <label class="control" for="Make_Web">
+        <input type="checkbox" name="Course_type" id="Make_Web" value="7">
+        <span class="control__content">
+        웹 페이지 만들기
+        </span>
+      </label>
+    </fieldset>
+    <fieldset>
+      <label class="control" for="Time_1">
+        <input type="checkbox" name="Course_time" id="Time_1" value="1" checked>
+        <span class="control__content">
+        07:00
+        </span>
+      </label>
+      <label class="control" for="Time_2">
+        <input type="checkbox" name="Course_time" id="Time_2" value="2">
+        <span class="control__content">
+        08:00
+        </span>
+      </label>
+      <label class="control" for="Time_3">
+        <input type="checkbox" name="Course_time" id="Time_3" value="3">
+        <span class="control__content">
+        09:00
+        </span>
+      </label>
+      <label class="control" for="Time_4">
+        <input type="checkbox" name="Course_time" id="Time_4" value="4">
+        <span class="control__content">
+        10:00
+        </span>
+      </label>
+      <label class="control" for="Time_5">
+        <input type="checkbox" name="Course_time" id="Time_5" value="5">
+        <span class="control__content">
+        11:00
+        </span>
+      </label>
+      <label class="control" name="Time_6">
+        <input type="checkbox" name="Course_time" id="Time_6" value="6">
+        <span class="control__content">
+        12:00
+        </span>
+      </label>
+      <label class="control" for="Time_7">
+        <input type="checkbox" name="Course_time" id="Time_7" value="7">
+        <span class="control__content">
+        13:00
+        </span>
+      </label>
+      <label class="control" for="Time_8">
+        <input type="checkbox" name="Course_time" id="Time_8" value="8"> 
+        <span class="control__content">
+        14:00
+        </span>
+      </label>
+    </fieldset>
+    <fieldset>
+      <label class="control" for="Time_9">
+        <input type="checkbox" name="Course_time" id="Time_9" value="9">
+        <span class="control__content">
+        15:00
+        </span>
+      </label>
+      <label class="control" for="Time_10">
+        <input type="checkbox" name="Course_time" id="Time_10" value="10">
+        <span class="control__content">
+        16:00
+        </span>
+      </label>
+      <label class="control" for="Time_11">
+        <input type="checkbox" name="Course_time" id="Time_11" value="11">
+        <span class="control__content">
+        17:00
+        </span>
+      </label>
+      <label class="control" for="Time_12">
+        <input type="checkbox" name="Course_time" id="Time_12" value="12">
+        <span class="control__content">
+        18:00
+        </span>
+      </label>
+      <label class="control" for="Time_13">
+        <input type="checkbox" name="Course_time" id="Time_13" value="13">
+        <span class="control__content">
+        19:00
+        </span>
+      </label>
+      <label class="control" for="Time_14">
+        <input type="checkbox" name="Course_time" id="Time_14" value="14">
+        <span class="control__content">
+        20:00
+        </span>
+      </label>
+      <label class="control" for="Time_15">
+        <input type="checkbox" name="Course_time" id="Time_15" value="15">
+        <span class="control__content">
+        21:00
+        </span>
+      </label>
+      <label class="control" for="Time_16">
+        <input type="checkbox" name="Course_time" id="Time_16" value="16">
+        <span class="control__content">
+        22:00
+        </span>
+      </label>
+      <label class="control" for="Time_17">
+        <input type="checkbox" name="Course_time" id="Time_17" value="17">
+        <span class="control__content">
+        23:00
+        </span>
+      </label>
+    </fieldset><br>
+    <button type="submit" class="btn btn-dark">검색</button>
+
+  </form>
+</div>
   
-    <form action = "/enroll/sub_result" method="get">
+    <!-- <form action = "/enroll/sub_result" method="get">
         <table border="1">
             <tr>
                 <td id> 강의유형 </td>
@@ -120,7 +321,7 @@
         <i class="bi bi-search" type="submit" value="검색"></i>
         <input type="submit" value="검색"></input>
     </div>
-    </form>
+    </form> -->
   </body>
   <!-- Footer-->
   <footer class="bg-light py-5">
