--- a/views/my_page_instructor.ejs
+++ b/views/my_page_instructor.ejs
@@ -135,7 +135,7 @@
       <div class="p-4 p-md-1 mb-1 rounded text-bg-dark">
         <div class="col-md-6 px-0">
           <h1 class="display-6 fst-italic">
-            Welcome to Codingnara
+            강사페이지입니다.
           </h1>
           <p class="lead my-4">
             <%=Name%>님 환영합니다.
@@ -149,39 +149,42 @@
             class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
           >
             <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-primary"
-                ><i class="bi bi-piggy-bank fs-1 text-primary"></i>
-              </strong>
-              <h3 class="mb-0">포인트</h3>
+              <strong class="d-inline-block mb-2 text-success"
+                ><i class="bi bi-lock-fill fs-2 text-primary"></i
+              ></strong>
+              <h3 class="mb-0">과목, 강좌 가능일</h3>
               <div class="mb-1 text-muted">-----------------------------</div>
               <p class="card-text mb-auto text-muted">
-                다양한 이벤트에서 포인트를 적립하여 수강신청시 사용할 수
-                있습니다.
+                개인정보를 수정하고 싶다면 아래 링크를 클릭해 본인임을 인증해 주세요.
               </p>
+              <a href="/myinfo/instructor/update">인증</a>
             </div>
-            <div class="col-auto d-none d-lg-block">
-              <svg
-                class="bd-placeholder-img"
-                width="200"
-                height="250"
-                xmlns="http://www.w3.org/2000/svg"
-                role="img"
-                aria-label="Placeholder: Thumbnail"
-                preserveAspectRatio="xMidYMid slice"
-                focusable="false"
+            <div class="col-auto d-none d-lg-block"  style="color:white">
+              <a
+              href="/myinfo/instructor/update" 
               >
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#55595c" />
-                <text
-                  x="50%"
-                  y="50%"
-                  fill="#eceeef"
-                  dy=".5em"
-                  style="font-size: 25px"
+                <svg
+                  class="bd-placeholder-img"
+                  width="200"
+                  height="250"
+                  xmlns="http://www.w3.org/2000/svg"
+                  role="img"
+                  aria-label="Placeholder: Thumbnail"
+                  preserveAspectRatio="xMidYMid slice"
+                  focusable="false"
                 >
-                  ₩30,000
-                </text>
-              </svg>
+                  <rect width="100%" height="100%" fill="#55595c" style="color:white" />
+                  <text
+                    x="50%"
+                    y="50%"
+                    fill="#eceeef"
+                    dy=".5em"
+                    style="font-size: 25px;"
+                  >
+                    변경
+                  </text>
+                </svg>
+              </a>
             </div>
           </div>
         </div>
@@ -247,11 +250,15 @@
           <table class="board-table">
             <thead>
               <tr>
+                <th scope="col" class="th-title">강좌수</th>
                 <th scope="col" class="th-title">강좌명</th>
+                <th scope="col" class="th-date">강의 요일</th>
                 <th scope="col" class="th-date">강의 시간</th>
-                <th scope="col" class="th-date">남은 횟수</th>
-                <th scope="col" class="th-date">선생님</th>
-                <th scope="col" class="th-date">리뷰</th>
+                <th scope="col" class="th-date">학생</th>
+                <th scope="col" class="th-date">강의 완료 횟수</th>
+                <th scope="col" class="th-date">강의 남은 횟수</th>
+                <th scope="col" class="th-date">강의 총 횟수</th>
+                <th scope="col" class="th-date">강의 완료</th>
                 <th scope="col" class="th-date">강의</th>
                 <th scope="col" class="th-date">강의 코드</th>
               </tr>
@@ -279,6 +286,8 @@
   <!-- SimpleLightbox plugin JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
   <script src="../js/scripts.js"></script>
+  <script src="../js/instructor.js"></script>
+
 
   <!-- Core theme JS-->
   <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
