--- a/views/my_page_instructor.ejs
+++ b/views/my_page_instructor.ejs
@@ -158,6 +158,8 @@
                 개인정보를 수정하고 싶다면 아래 링크를 클릭해 본인임을 인증해 주세요.
               </p>
               <a href="/myinfo/instructor/update">인증</a>
+              <a href="/myinfo/instructor/lecture/history">강의 기록</a>
+
             </div>
             <div class="col-auto d-none d-lg-block"  style="color:white">
               <a
