--- a/views/my_page_instructor.ejs
+++ b/views/my_page_instructor.ejs
@@ -204,6 +204,7 @@
                 개인정보를 수정하고 싶다면 아래 링크를 클릭해 본인임을 인증해 주세요.
               </p>
               <a href="/myinfo/user_information_change">인증</a>
+              <a href="/myinfo/update/instructor">강사정보 추가</a>
             </div>
             <div class="col-auto d-none d-lg-block"  style="color:white">
               <a
