수강신청 페이지 디자인 구현

--- a/views/enroll_cart.ejs
+++ b/views/enroll_cart.ejs
@@ -65,7 +65,18 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">Coding-nara</a>
+        <a
+          class="navbar-brand"
+          href="#page-top"
+          style="display: flex; flex-direction: row"
+        >
+          <img
+            src="../image/logo_mini.png"
+            width="30px"
+            height="30px"
+            style="margin-right: 7px"
+          />Coding-nara
+        </a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -181,10 +192,13 @@
       </div>
       <div class="cart__information">
         <ul>
-          <li>장바구니 강의는 최대 30일간 저장됩니다.</li>
-          <li>강의 신청은 선착순으로 진행됩니다.</li>
           <li>
             강의를 한 번 이상 들을 시 사용하신 포인트는 환불되지 않습니다.
+          </li>
+          <li>강의 신청은 선착순으로 진행됩니다.</li>
+          <li>
+            다른 사람이 먼저 강의를 신청할 시 장바구니에 담긴 강의가 자동 삭제될
+            수 있습니다.
           </li>
         </ul>
       </div>
