--- a/views/main_page.ejs
+++ b/views/main_page.ejs
@@ -58,9 +58,17 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">
-          <img src="../image/logo_mini.png" width="30px" height="30px" />
-          Coding-nara
+        <a
+          class="navbar-brand"
+          href="#page-top"
+          style="display: flex; flex-direction: row"
+        >
+          <img
+            src="../image/logo_mini.png"
+            width="30px"
+            height="30px"
+            style="margin-right: 7px"
+          />Coding-nara
         </a>
         <button
           class="navbar-toggler navbar-toggler-right"
