--- a/views/auth/auth_login_main.ejs
+++ b/views/auth/auth_login_main.ejs
@@ -29,7 +29,7 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../CSS/styles.css" rel="stylesheet" />
+    <link href="../CSS/styles_none.css" rel="stylesheet" />
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -55,7 +55,18 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">Coding-nara</a>
+        <a
+          class="navbar-brand"
+          href="#page-top"
+          style="display: flex; flex-direction: row"
+        >
+          <img
+            src="../image/logo_mini.png"
+            width="30px"
+            height="30px"
+            style="margin-right: 7px"
+          />Coding-nara
+        </a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -82,29 +93,14 @@
             <li class="nav-item">
               <a class="nav-link" href="/ask">고객센터</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login"><%-authCheck %></a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- Masthead-->
-    <header class="masthead">
-      <div class="container px-4 px-lg-5 h-100">
-        <div
-          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
-        >
-          <div class="col-lg-8 align-self-end">
-            <h1 class="text-white font-weight-bold">로그인</h1>
-            <hr class="divider" />
-          </div>
-          <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 mb-5">
-              우리 아이에 적합한 교육 서비스를 경험해보세요
-            </p>
-            <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-          </div>
-        </div>
-      </div>
-    </header>
     <section class="page-section" id="contact">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -221,10 +217,13 @@
         <div class="row gx- gx-lg-5 justify-content-center">
           <div class="col-lg-4 text-center mb-5 mb-lg-0">
             <div class="row g-1">
-              <div class="col-sm">
+              <div
+                class="col-sm"
+                style="padding-left: 10px; padding-right: 50px"
+              >
                 <div class="form-floating">
                   <a id="naver_id_login" href="<%=API_URL%>">
-                    <img height="50" src="../image/naverlogin.png" />
+                    <img width="50" height="50" src="../image/naverlogin.png" />
                   </a>
                 </div>
               </div>
@@ -234,7 +233,6 @@
                     <img
                       src="../image/kakaologin.png"
                       width="50"
-                      ,
                       height="50"
                       alt="카카오 로그인 버튼"
                     />
