--- a/views/enroll_page_after_search.ejs
+++ b/views/enroll_page_after_search.ejs
@@ -14,7 +14,6 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="../CSS/styles.css" rel="stylesheet" />
-        <link href="../CSS/styles1.css" rel="stylesheet" />
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -37,7 +36,18 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
       <div class="container px-4 px-lg-5">
-          <a class="navbar-brand" href="#page-top">Coding-nara</a>
+        <a
+        class="navbar-brand"
+        href="#page-top"
+        style="display: flex; flex-direction: row"
+      >
+        <img
+          src="../image/logo_mini.png"
+          width="30px"
+          height="30px"
+          style="margin-right: 7px"
+        />Coding-nara
+      </a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ms-auto my-2 my-lg-0">
