--- a/views/review_page_enter.ejs
+++ b/views/review_page_enter.ejs
@@ -38,7 +38,18 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
       <div class="container px-4 px-lg-5">
-          <a class="navbar-brand" href="#page-top">Coding-nara</a>
+        <a
+        class="navbar-brand"
+        href="#page-top"
+        style="display: flex; flex-direction: row"
+      >
+        <img
+          src="../image/logo_mini.png"
+          width="30px"
+          height="30px"
+          style="margin-right: 7px"
+        />Coding-nara
+      </a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ms-auto my-2 my-lg-0">
