--- a/views/my_page_instructor.ejs
+++ b/views/my_page_instructor.ejs
@@ -272,9 +272,14 @@
             </tbody>
           </table>
         </div>
-      </div>
+      </div>Email_Address
     </section>
     <p></p>
+    <img src={`http://localhost:54213/uploads/image-1676795513843`}>
+    <form id="form" action="/myinfo/upload" method="post" enctype="multipart/form-data">
+      <input type="file" name="image" />
+      <button type="submit">업로드</button>
+    </form>
   </body>
   <!-- Footer-->
   <footer class="bg-light py-5">
