--- a/views/auth/auth_register_main.ejs
+++ b/views/auth/auth_register_main.ejs
@@ -30,8 +30,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css"
       rel="stylesheet"
     />
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+    ></script>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../CSS/styles.css" rel="stylesheet" />
+    <link href="../CSS/styles_none.css" rel="stylesheet" />
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -60,7 +64,18 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">Coding-nara</a>
+        <a
+          class="navbar-brand"
+          href="#page-top"
+          style="display: flex; flex-direction: row"
+        >
+          <img
+            src="../image/logo_mini.png"
+            width="30px"
+            height="30px"
+            style="margin-right: 7px"
+          />Coding-nara
+        </a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -91,25 +106,6 @@
         </div>
       </div>
     </nav>
-    <!-- Masthead-->
-    <header class="masthead">
-      <div class="container px-4 px-lg-5 h-100">
-        <div
-          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
-        >
-          <div class="col-lg-8 align-self-end">
-            <h1 class="text-white font-weight-bold">회원가입</h1>
-            <hr class="divider" />
-          </div>
-          <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 mb-5">
-              우리 아이에 적합한 교육 서비스를 경험해보세요
-            </p>
-            <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
-          </div>
-        </div>
-      </div>
-    </header>
     <!-- Contact-->
     <section class="page-section" id="contact">
       <div class="container px-4 px-lg-5">
@@ -354,16 +350,6 @@
                   A phone number is required.
                 </div>
               </div>
-              <!-- Message input-->
-              <!-- <div class="form-floating mb-3">
-                        <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                        <label for="message">Message</label>
-                        <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                    </div> -->
-              <!-- Submit success message-->
-              <!---->
-              <!-- This is what your users will see when the form-->
-              <!-- has successfully submitted-->
               <div class="d-none" id="submitSuccessMessage">
                 <div class="text-center mb-3">
                   <div class="fw-bolder">Form submission successful!</div>
