--- a/views/refund_page.ejs
+++ b/views/refund_page.ejs
@@ -3,6 +3,10 @@
   <head>
     <title>Login TEST - ${title}</title>
     <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap Icons-->
@@ -25,17 +29,33 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css"
       rel="stylesheet"
     />
+    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="../CSS/styles.css" rel="stylesheet" />
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.12.4.min.js"
     ></script>
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
     ></script>
-    <script src="../js/email_validation_and_address_script.js"></script>
+    <style>
+      .cart {
+        width: 53%;
+        margin: auto;
+        padding: 30px;
+      }
+
+      .cart ul {
+        background-color: whitesmoke;
+        padding: 30px;
+        margin-bottom: 50px;
+        border: whitesmoke solid 1px;
+        border-radius: 5px;
+        font-size: 15px;
+        font-weight: 300;
+      }
+    </style>
   </head>
   <body>
     <div class="loader-wrapper">
@@ -99,19 +119,17 @@
       </div>
     </nav>
     <!-- Masthead-->
-    <header class="masthead_mypage">
+    <header class="masthead_review">
       <div class="container px-4 px-lg-5 h-100">
         <div
           class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
         >
           <div class="col-lg-8 align-self-end">
-            <h1 class="text-white font-weight-bold">개인정보수정</h1>
+            <h1 class="text-white font-weight-bold">환불하기</h1>
             <hr class="divider" />
           </div>
           <div class="col-lg-8 align-self-baseline">
-            <p class="text-white-75 mb-5">
-              개인 정보를 변경하기 위해 아래 폼을 작성하세요.
-            </p>
+            <p class="text-white-75 mb-5">저희 서비스에 불만족을 느끼셨나요?</p>
           </div>
         </div>
       </div>
@@ -120,126 +138,135 @@
     <br />
     <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
       <div class="col-lg-6">
-        <form id="contactForm" action="/myinfo/update_mypage" method="post">
+        <form id="contactForm" action="/myinfo/refund_db" method="post">
           <!-- Name input-->
           <div class="form-floating mb-3">
-            <input
-              class="form-control"
-              id="name"
-              name="username"
-              type="text"
-              placeholder="Enter your name..."
-              data-sb-validations="required"
-              value="<%-Nickname%>"
-            />
-            <label for="name">이름<span class="text-danger"> *</span></label>
-          </div>
-          <!-- Phone number input-->
-          <div class="form-floating mb-3">
-            <input
-              class="form-control"
-              id="phone"
-              name="number"
-              type="tel"
-              oninput="autoHyphen2(this)"
-              maxlength="13"
-              placeholder="010-1234-5678"
-              data-sb-validations="required"
-              value="<%=Mobile%>"
-            />
-            <label for="phone"
-              >전화번호<span class="text-danger"> *</span></label
-            >
-          </div>
-          <!-- address input-->
-          <div class="row g-2">
-            <div class="col-md-3">
-              <div class="form-floating">
-                <input
-                  class="form-control"
-                  id="member_post"
-                  name="member_post"
-                  type="text"
-                  placeholder="Zip Code"
-                  required
-                  readonly
-                  onclick="findAddr()"
-                />
-                <label for="phone"
-                  >우편번호<span class="text-danger"> *</span></label
-                >
-                <div class="invalid-feedback" data-sb-feedback="phone:required">
-                  The Address is required.
+            <div class="row g-4">
+              <div class="col-md">
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="course"
+                    name="course"
+                    type="text"
+                    value="<%=Subject%>"
+                    data-sb-validations="required"
+                    readonly
+                  />
+                  <label for="name"
+                    >강좌<span class="text-danger"></span
+                  ></label>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="teacher"
+                    name="teacher"
+                    type="text"
+                    data-sb-validations="required"
+                    value="<%=Teacher%>"
+                    readonly
+                  />
+
+                  <label for="name"
+                    >선생님<span class="text-danger"></span
+                  ></label>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="time"
+                    name="time"
+                    type="text"
+                    value="<%=Time%>"
+                    data-sb-validations="required"
+                    readonly
+                  />
+                  <label for="name"
+                    >시간<span class="text-danger"></span
+                  ></label>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="form-floating">
+                  <input
+                    class="form-control"
+                    id="day"
+                    name="day"
+                    type="text"
+                    value="<%=Day%>"
+                    data-sb-validations="required"
+                    readonly
+                  />
+                  <label for="name"
+                    >요일<span class="text-danger"></span
+                  ></label>
                 </div>
               </div>
             </div>
-            <div class="col-md">
-              <div class="form-floating">
-                <input
-                  class="form-control"
-                  id="member_addr"
-                  name="member_addr"
-                  type="text"
-                  placeholder="Address"
-                  required
-                  readonly
-                  onclick="findAddr()"
-                />
-                <label for="phone"
-                  >주소<span class="text-danger"> *</span></label
-                >
-                <div class="invalid-feedback" data-sb-feedback="phone:required">
-                  The Address is required.
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="form-floating mb-1"></div>
-          <div class="form-floating mb-3">
-            <input
-              class="form-control"
-              id="member_leftover"
-              name="member_leftover"
-              type="text"
-              placeholder="Detailed Address"
-            />
-            <label for="phone">나머지 주소</label>
-          </div>
-          <div class="d-none" id="submitSuccessMessage">
-            <div class="text-center mb-3">
-              <div class="fw-bolder">Form submission successful!</div>
-              To activate this form, sign up at
-              <br />
-              <a href="https://startbootstrap.com/solution/contact-forms"
-                >https://startbootstrap.com/solution/contact-forms</a
+            <br />
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >환불 사유</label
               >
+              <br />
+              <input
+                class="form-control form-control-lg"
+                id="reason"
+                name="reason"
+                type="text"
+                data-sb-validations="required"
+                placeholder="환불 사유 입력"
+              />
+              <!-- <textarea
+                  class="form-control"
+                  id="reason"
+                  name="reason"
+                  id="reason"
+                  rows="3"
+                ></textarea> -->
             </div>
           </div>
-          <div class="d-none" id="submitErrorMessage">
-            <div class="text-center text-danger mb-3">
-              Error sending message!
-            </div>
-          </div>
-          <!-- Submit Button-->
-          <div class="d-grid">
-            <button
-              class="btn btn-primary btn-xl"
-              id="submitButton"
-              type="submit"
-            >
-              제출
-            </button>
-          </div>
+
+          <center>
+            <input type="submit" class="btn btn-danger" value="환불하기" />
+          </center>
         </form>
       </div>
     </div>
+
+    <section class="cart">
+      <div class="cart__information">
+        <ul>
+          <li>
+            강의를 한 번 이상 들을 시 사용하신 포인트는 환불되지 않습니다.
+          </li>
+          <li>
+            <span
+              >환불은
+              <a
+                href="https://easylaw.go.kr/CSP/CnpClsMain.laf?popMenu=ov&csmSeq=1140&ccfNo=4&cciNo=2&cnpClsNo=1"
+                >환불 규정</a
+              >
+              내용을 따릅니다.</span
+            >
+          </li>
+          <li>환불 소요 시간은 최대 7일 소요됩니다.</li>
+        </ul>
+      </div>
+    </section>
+    <br />
   </body>
   <!-- Footer-->
   <footer class="bg-light py-5">
     <div class="container px-4 px-lg-5">
       <div class="small text-center text-muted">
         <a href="/policy/private">개인정보처리방침</a> |
-        <a href="/policy/tos">이용약관</a>
+        <a href="/policy/tos">이용약관</a> |
       </div>
     </div>
     <div class="container px-4 px-lg-5">
@@ -266,9 +293,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
   <!-- Core theme JS-->
   <script src="../js/scripts.js"></script>
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <!-- * *                               SB Forms JS                               * *-->
-  <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
   <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </html>
