--- a/views/review_page_root.ejs
+++ b/views/review_page_root.ejs
@@ -35,6 +35,10 @@
       type="text/javascript"
       src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"
     ></script>
+    <script
+      type="text/javascript"
+      src = "../js/review.js"
+    ></script>
   </head>
   <body>
     <div class="loader-wrapper">
@@ -52,7 +56,18 @@
       id="mainNav"
     >
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="#page-top">Coding-nara</a>
+        <a
+          class="navbar-brand"
+          href="#page-top"
+          style="display: flex; flex-direction: row"
+        >
+          <img
+            src="../image/logo_mini.png"
+            width="30px"
+            height="30px"
+            style="margin-right: 7px"
+          />Coding-nara
+        </a>
         <button
           class="navbar-toggler navbar-toggler-right"
           type="button"
@@ -89,14 +104,21 @@
     <!-- Masthead-->
     <header class="masthead_review">
       <div class="container px-4 px-lg-5 h-100">
-          <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-              <div class="col-lg-8 align-self-end">
-                  <h1 class="text-white font-weight-bold">강좌후기</h1>
-                  <hr class="divider" />
-              </div>
-              <div class="col-lg-8 align-self-baseline">
-                  <p class="text-white-75 mb-5">우리 아이에 적합한 교육 서비스를 경험해보세요</p>
-              </div>
+        <div
+          class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
+        >
+          <div
+            class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center"
+          >
+            <div class="col-lg-8 align-self-end">
+              <h1 class="text-white font-weight-bold">강좌후기</h1>
+              <hr class="divider" />
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+              <p class="text-white-75 mb-5">
+                우리 아이에 적합한 교육 서비스를 경험해보세요
+              </p>
+            </div>
           </div>
           <div class="col-lg-8 align-self-baseline">
             <p class="text-white-75 mb-5">
@@ -107,16 +129,13 @@
         </div>
       </div>
     </header>
-    <h2><%=Title%></h2>
+  </br>
     <section class="notice">
       <div class="page-title">
         <div class="container">
           <h3></h3>
         </div>
       </div>
-
-      <!-- board seach area -->
-
       <!-- board list area -->
       <div id="board-list">
         <div class="container">
@@ -124,38 +143,67 @@
             <thead>
               <tr>
                 <th scope="col" class="th-num">번호</th>
+                <th scope="col" class="th-num">강좌명</th>
                 <th scope="col" class="th-title">제목</th>
                 <th scope="col" class="th-date">등록일</th>
+                <th scope="col" class="th-date">글쓴이</th>
+                <th scope="col" class="th-date">공감</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="information">
               <%-List %>
             </tbody>
           </table>
         </div>
       </div>
     </section>
-    <a href="/review/create">글생성</a>
-    
+  </br>
+  <div style="display : flex;justify-content : center;">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+          <div id="page_list" style="display: flex;">
+            <%-Page_List%>
+          </div>
+      </ul>
+    </nav>
+  </div>
+</br>
   </body>
   <!-- Footer-->
   <footer class="bg-light py-5">
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted"><a href="/policy/private">개인정보처리방침</a> | <a href="/policy/tos">이용약관</a></div></div>
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자 정보 확인</div></div>
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">주소: 서울특별시 서대문구 북가좌동</div></div>
-    <br>
-    <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy;코딩나라(Coding-nara)</div></div>
-</footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- SimpleLightbox plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="../js/scripts.js"></script>
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <!-- * *                               SB Forms JS                               * *-->
-        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    </body>
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        <a href="/policy/private">개인정보처리방침</a> |
+        <a href="/policy/tos">이용약관</a>
+      </div>
+    </div>
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        코딩나라 | 대표자: 장영재, 박민수 | 사업자번호: 148-14-01860 사업자 정보
+        확인
+      </div>
+    </div>
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        주소: 서울특별시 서대문구 북가좌동
+      </div>
+    </div>
+    <br />
+    <div class="container px-4 px-lg-5">
+      <div class="small text-center text-muted">
+        Copyright &copy;코딩나라(Coding-nara)
+      </div>
+    </div>
+  </footer>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- SimpleLightbox plugin JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="../js/scripts.js"></script>
+  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+  <!-- * *                               SB Forms JS                               * *-->
+  <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </html>
