--- a/views/my_page_instructor.ejs
+++ b/views/my_page_instructor.ejs
@@ -272,11 +272,19 @@
             </tbody>
           </table>
         </div>
-      </div>Email_Address
+      </div>
     </section>
     <p></p>
-    <img src={`http://localhost:54213/uploads/image-1676795513843`}>
-    <form id="form" action="/myinfo/upload" method="post" enctype="multipart/form-data">
+    <button id="modal">Show modal</button>
+    <dialog id="dialog">
+      강사세부정보입니다.<br>
+      <%-Name %><br>
+
+      <form method="dialog">
+        <button>닫기</button>
+      </form>
+    </dialog>
+    <form id="form" action="/myinfo/upload" method="post" enctype="multipart/form-data" accept="image/gif, image/jpeg, image/png, image/webp">
       <input type="file" name="image" />
       <button type="submit">업로드</button>
     </form>
